# game-backend

./: CMakeLists.txt  README.md
src/: application.h  collision_detector.cpp  collision_detector.h  db_connection.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  log_response.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  player.cpp  player.h  request_handler.cpp  request_handler.h  serialization.cpp  serialization.h
src/util/: tagged.h  tagged_uuid.h
tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model_tests.cpp
